--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "display": "standalone",
     "icons" : [
         {
-            "src": "./PWA/assets/images/SKILLHUB-48-48.png",
+            "src": "/assets/images/SKILLHUB-48-48.png",
             "sizes":"48x48"
         },
         {
