--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "Skillhub",
-    "start_url" :"/pwa",
+    "start_url" :"/PWA",
     "display": "standalone",
     "icons" : [
         {
